@@ -6,7 +6,7 @@
  - Tries harder to detect connection failures that libpq glosses over
  - Reference documentation grouped into more coherent sections
  - With Visual C++, doesn't redefine NOMINIMAX if it is defined already
- - Several minor compatibility improvements for Visual C++
+ - Several compatibility improvements for Visual C++
 2.5.6
  - Support null parameters to prepared statements (use C-style char pointers)
 2.5.5
